<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_note_activity">Edit note</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="courses">Courses</string>
    <string name="open_nav">Open nav</string>
    <string name="close_nav">Close nav</string>
    <string name="note_text_hint">Note text</string>
    <string name="note_title_hint">Note Title</string>
    <string name="nav_share_message">Share</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>

    <!-- General Preferences -->
    <!-- title -->
    <string name="pref_user_display_name_title">Display Name</string>
    <string name="pref_user_email_address_title">Email Address</string>
    <string name="pref_fav_social_title">Favorite Social Network</string>
    <!-- values -->
    <string name="pref_user_display_name_value">Your Name</string>
    <string name="pref_user_email_address_value">yourname@yourhost.com</string>
    <string name="pref_fav_social_value">http://plus.google.com</string>
    <string name="set_reminder">Set Reminder</string>

    <string-array name="pref_entries_fav_social">
        <item>Google+</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>

    <string-array name="pref_values_fav_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
    </string-array>


    <string name="channel_name">NoteKeeper</string>
    <string name="channel_description">Keep your notes</string>
    <string name="backup_notes">Backup Notes</string>
    <string name="upload_note">Upload Note</string>

</resources>
